--- a/c4_main.css
+++ b/c4_main.css
@@ -30,7 +30,7 @@ main h2 {
 	color: var(--global-color-1);
 	font-size: 130%;
 }
-main h3 {
+body main h3.month {
 	font-size: 105%;
 }
 a:hover { /* italicizes links when cursor hovers over it*/
@@ -40,6 +40,6 @@ footer p {
 	text-align: center;
 }
 body header h3 em.shadow {
-	text-shadow: #800000;
+	text-shadow: 3px 3px #800000;
 }
 /* the styles for the footer */
