--- a/c4_main.css
+++ b/c4_main.css
@@ -1,3 +1,6 @@
+:root{
+	--global-color-1: #800000;
+}
 /* the styles for the elements */
 body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -5,18 +8,21 @@ body {
 }
 
 /* the styles for the header */
+header h2 { /* "h2" is in "main," which is in "body" */
+	font-size: 170%;
+	color: var(--global-color-1);
+	text-indent: 30px;
+}
+header h3 { /* "h3" is in "main," which is in "body" */
+	font-size: 130%;
+	font-style: italic;
+	text-indent: 30px;
+}
 header img {
 	float: left;
 }
-body main h2 { /* "h2" is in "main," which is in "body" */
-	font-size: 170%;
-	color: #800000;
-	padding-left: 30px;
-}
-body main h3 { /* "h3" is in "main," which is in "body" */
-	font-size: 130%;
-	font-style: italic;
-	padding-left: 30px;
+.shadow {
+	text-shadow: 2px 2px 2px var(--global-color-1);
 }
 
 /* the styles for the main content */
@@ -30,16 +36,13 @@ main h2 {
 	color: var(--global-color-1);
 	font-size: 130%;
 }
-body main h3.month {
+main h3 {
 	font-size: 105%;
 }
-a:hover { /* italicizes links when cursor hovers over it*/
-	text-decoration: italic; 
+a:focus, a:hover { /* italicizes links when cursor hovers over it*/
+	font-style: italic; 
 }
+/* the styles for the footer */
 footer p {
 	text-align: center;
 }
-body header h3 em.shadow {
-	text-shadow: 1px 1px #800000;
-}
-/* the styles for the footer */
